--- a/messages.html
+++ b/messages.html
@@ -110,7 +110,7 @@ Thank you for staying with me through all the months. Thank you for understandin
   <textarea id="newMsg" placeholder="Add a new message..."></textarea>
   <button class="btn" id="addMsg">Add Message</button>
 
-  <audio autoplay loop src ="https://www.bensound .com/bensound-music /bensound-romantic.mp3" ></audio>
+  <audio autoplay loop src ="https://www.bensound.com/bensound-music/bensound-romantic.mp3"></audio>
 </main>
 
 <script>
