--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
   <!-- Audio -->
   <h2 style="margin-top:30px; color:#ff6b9a;">Our Song 🎵</h2>
-  <audio controls autoplay loop>
-  <audio controls src="yung kai blue Lyrics.mp3" style="width:80%; margin-top:10px;"></audio>
+  
+  <audio controls src="yung kai blue Lyrics.mp3" style="width:80%; margin-top:10px;">
 
 </main>
 
