--- a/messages.html
+++ b/messages.html
@@ -110,7 +110,7 @@ Thank you for staying with me through all the months. Thank you for understandin
   <textarea id="newMsg" placeholder="Add a new message..."></textarea>
   <button class="btn" id="addMsg">Add Message</button>
 
-  <audio autoplay loop src="https://open.spotify.com/track/5CUQnKjA6nlteCnxMKsjIu?si=75CmrIpxRXu0MbwmspKfvA"></audio>
+  <audio autoplay loop src="https://open.spotify.com/track/5CUQnKjA6nlteCnxMKsjIu?si=75CmrIpxRXu0MbwmspKfvA.mp3"></audio>
 </main>
 
 <script>
