--- a/messages.html
+++ b/messages.html
@@ -109,9 +109,9 @@ Thank you for staying with me through all the months. Thank you for understandin
 
   <textarea id="newMsg" placeholder="Add a new message..."></textarea>
   <button class="btn" id="addMsg">Add Message</button>
-<audio autoplay>
-  <source src="Adie Tahanan Official Audio.mp3" type="audio/mpeg">
-</audio>
+
+  <source src="Adie Tahanan Official Audio.mp3">
+
   
 </main>
 
