--- a/messages.html
+++ b/messages.html
@@ -109,7 +109,8 @@ Thank you for staying with me through all the months. Thank you for understandin
 
   <textarea id="newMsg" placeholder="Add a new message..."></textarea>
   <button class="btn" id="addMsg">Add Message</button>
-  <audio controls src="Adie Tahanan Official Audio.mp3" style="width:80%; margin-top:10px;"></audio>
+  <audio controls autoplay loop>
+  <source src="Adie Tahanan Official Audio.mp3" style="width:80%; margin-top:10px;"></audio>
   
   
 </main>
