--- a/together.html
+++ b/together.html
@@ -112,7 +112,7 @@
   <div class="hearts" id="heartsLayer"></div>
 
   <!-- Background music -->
-  <source src="Elvis Presley Can t Help Falling in Love Lyrics.mp3">
+  <audio autoplay loop src="https://open.spotify.com/track/6yIHGmQLJxWAUZ1ZkENemN?si=n8xdnde2T4yQqhP7sNJgyg"></audio>
 </main>
 
 <script>
