--- a/together.html
+++ b/together.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -112,7 +112,7 @@
   <div class="hearts" id="heartsLayer"></div>
 
   <!-- Background music -->
-  <audio controls src="Elvis Presley Can t Help Falling in Love Lyrics.mp3"></audio>
+  <audio autoplay loop src="Elvis Presley Can t Help Falling in Love Lyrics.mp3"></audio>
 </main>
 
 <script>
