--- a/favorites.html
+++ b/favorites.html
@@ -67,7 +67,7 @@
   </div>
 
   <div class="hearts" id="heartsLayer"></div>
-  <audio autoplay loop src="https://www.bensound.com/bensound-music/bensound-romantic.mp3"></audio>
+  <audio autoplay loop src="Adie Paraluman Official Audio.mp3"></audio>
 </main>
 
 <script>
